rastreo-core/src/snapshots/rastreo_core__plan__tests__display_renders_exact_dry_run_block.snap
---
source: rastreo-core/src/plan.rs
expression: plan.to_string()
---
  scenario: discovery
    targets:
      127.0.0.1 → 127.0.0.1
    probers: tcp_connect (ports 22, 80)
    fuser: direct (include_unreachable false, confidence_baseline 0.1, confidence_per_signal 0.1)
    classifier: rules (merge_mode extend, platform_rules 0, role_rules 0)
    encoder: ndjson
    sink: stdout
    concurrency: 64
    rate: unlimited
    retries: 0
    timeout_ms: 1000
